--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!--
       <link
         rel="stylesheet"
@@ -14,7 +11,7 @@
         crossorigin="anonymous"
       />
     -->
-    <title>Reactify Seed</title>
+    <title>Data Structures & Algorithms</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
